--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "vue": "^2.5.11",
-    "vue2-touch-events": "^3.2.2"
+    "vue2-touch-events": "^3.2.2",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
