--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "modern-normalize": "^1.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.5.2",
-    "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
